added thumbnail storage location to file upload response